pbc_contract_codegen/tests/action/fail/zk/not_real_zkstate.stderr
error[E0308]: mismatched types
   --> tests/action/fail/zk/not_real_zkstate.rs:20:1
    |
20  | #[action]
    | ^^^^^^^^^
    | |
    | expected struct `pbc_contract_common::zk::ZkState`, found struct `ZkState`
    | expected due to this
    |
    = note: struct `ZkState` and struct `pbc_contract_common::zk::ZkState` have similar names, but are actually distinct types
note: struct `ZkState` is defined in the current crate
   --> tests/action/fail/zk/not_real_zkstate.rs:6:1
    |
6   | struct ZkState { }
    | ^^^^^^^^^^^^^^
note: struct `pbc_contract_common::zk::ZkState` is defined in crate `pbc_contract_common`
   --> $WORKSPACE/pbc_contract_common/src/zk/mod.rs
    |
    | pub struct ZkState<SecretVarMetadataT> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/action/fail/zk/not_real_zkstate.rs:20:1
    |
20  | #[action]
    | ^^^^^^^^^ expected struct `ZkState`, found struct `pbc_contract_common::zk::ZkState`
21  | fn action(_context: pbc_contract_common::context::ContractContext, state: u64, _zk_state: ZkState) -> u64 { state }
    |    ------ arguments to this function are incorrect
    |
    = note: struct `pbc_contract_common::zk::ZkState` and struct `ZkState` have similar names, but are actually distinct types
note: struct `pbc_contract_common::zk::ZkState` is defined in crate `pbc_contract_common`
   --> $WORKSPACE/pbc_contract_common/src/zk/mod.rs
    |
    | pub struct ZkState<SecretVarMetadataT> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: struct `ZkState` is defined in the current crate
   --> tests/action/fail/zk/not_real_zkstate.rs:6:1
    |
6   | struct ZkState { }
    | ^^^^^^^^^^^^^^
note: function defined here
   --> tests/action/fail/zk/not_real_zkstate.rs:21:4
    |
21  | fn action(_context: pbc_contract_common::context::ContractContext, state: u64, _zk_state: ZkState) -> u64 { state }
    |    ^^^^^^                                                                      ------------------
    = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)
